--- a/bin/install
+++ b/bin/install
@@ -18,6 +18,6 @@ curl -L git.io/antigen > ~/.zsh/antigen.zsh
 curl -LSso ~/.vim/autoload/pathogen.vim https://tpo.pe/pathogen.vim
 
 # install vim plugins and fzf
-git submodule update --remote --init
+git submodule update --init
 git clone --depth 1 https://github.com/junegunn/fzf.git ~/.fzf
 ~/.fzf/install --key-bindings --completion --update-rc
