update fzf install

--- a/bin/install
+++ b/bin/install
@@ -1,10 +1,5 @@
 #!/bin/bash
 
-# set current working directory and absolute env path
-#cwd=$(dirname $0)
-#cwd=$(pwd)
-#env=$(readlink -f ${cwd}/../env)
-
 # ensure the required directories
 mkdir -p ~/.dotfiles/bundle ~/.vim/autoload ~/.zsh
 
@@ -18,7 +13,15 @@ ln -sf ~/.dotfiles/env/plugins ~/.vim/bundle
 curl -L git.io/antigen > ~/.zsh/antigen.zsh
 curl -LSso ~/.vim/autoload/pathogen.vim https://tpo.pe/pathogen.vim
 
-# install vim plugins and fzf
-git -C ~/.dotfiles submodule update --init
-git clone --depth 1 https://github.com/junegunn/fzf.git ~/.fzf
-~/.fzf/install --key-bindings --completion --update-rc
+# pull git submodules
+git -C ~/.dotfiles submodule update \
+	--init \
+	--recursive
+
+# install fzf
+~/.dotfiles/env/bundle/fzf/install \
+	--keybindings \
+	--completion \
+	--update-cc \
+	--no-bash \
+	--no-zsh
