--- a/bin/install
+++ b/bin/install
@@ -1,27 +1,28 @@
 #!/bin/bash
 
 # ensure the required directories
-mkdir -p ~/.dotfiles/bundle ~/.vim/autoload ~/.zsh
-
-# symlink dotfiles and plugins directory
-ln -sf ~/.dotfiles/env/.vimrc ~/.vimrc
-ln -sf ~/.dotfiles/env/.tmux.conf ~/.tmux.conf
-ln -sf ~/.dotfiles/env/.zshrc ~/.zshrc
-ln -sf ~/.dotfiles/env/plugins ~/.vim/bundle
+mkdir -p ~/.vim/autoload ~/.zsh
 
 # download antigen and pathogen
 curl -L git.io/antigen > ~/.zsh/antigen.zsh
 curl -LSso ~/.vim/autoload/pathogen.vim https://tpo.pe/pathogen.vim
 
+# symlink dotfiles and plugins directory
+ln -sf ~/.dotfiles/.hyper.js ~/.hyper.js
+ln -sf ~/.dotfiles/env/.zshrc ~/.zshrc
+ln -sf ~/.dotfiles/env/.tmux.conf ~/.tmux.conf
+ln -sf ~/.dotfiles/env/.vimrc ~/.vimrc
+ln -sf ~/.dotfiles/env/bundle ~/.vim/bundle
+ln -sf ~/.dotfiles/env/bundle/fzf ~/.fzf
+
 # pull git submodules
 git -C ~/.dotfiles submodule update \
-	--init \
-	--recursive
+	--recursive \
+	--init
 
 # install fzf
 ~/.dotfiles/env/bundle/fzf/install \
-	--keybindings \
+	--key-bindings \
 	--completion \
-	--update-cc \
-	--no-bash \
-	--no-zsh
+	--update-rc \
+	--no-bash
