--- a/bin/install
+++ b/bin/install
@@ -5,11 +5,13 @@ mkdir -p ~/.zsh ~/.vim/autoload
 curl -L git.io/antigen > ~/.zsh/antigen.zsh
 curl -LSso ~/.vim/autoload/pathogen.vim https://tpo.pe/pathogen.vim
 
+# ensure modules are updated and setup fzf
+git -C ~/.dotfiles submodule update --init
+~/.dotfiles/env/fzf/install
+
 # symlink dotfiles and vim plugins
 ln -s ~/.dotfiles/env/.zshrc ~/.zshrc
 ln -s ~/.dotfiles/env/.tmux.conf ~/.tmux.conf
 ln -s ~/.dotfiles/env/.vimrc ~/.vimrc
 ln -s ~/.dotfiles/env/bundle ~/.vim/bundle
-
-# ensure modules are updated and setup fzf
-# git -C ~/.dotfiles submodule update --recursive --init
+ln -s ~/.dotfiles/env/fzf ~/.fzf
