--- a/bin/install
+++ b/bin/install
@@ -5,11 +5,19 @@ mkdir -p ~/.zsh ~/.vim/autoload
 curl -L git.io/antigen > ~/.zsh/antigen.zsh
 curl -LSso ~/.vim/autoload/pathogen.vim https://tpo.pe/pathogen.vim
 
-# ensure modules are updated and setup fzf
+# set git global config
+git config --global core.editor vim
+git config --global alias.ctags '!.git/hooks/ctags'
+git config --global init.templatedir '~/.dotfiles/env/git/template'
+git config --global credential.helper cache
+
+# initialize submodules
 git -C ~/.dotfiles submodule update --init
+
+# install fzf
 ~/.dotfiles/env/fzf/install
 
-# symlink dotfiles and vim plugins
+# symlink dotfiles, vim plugins and fzf
 ln -s ~/.dotfiles/env/.zshrc ~/.zshrc
 ln -s ~/.dotfiles/env/.tmux.conf ~/.tmux.conf
 ln -s ~/.dotfiles/env/.vimrc ~/.vimrc
