--- a/bin/install
+++ b/bin/install
@@ -7,6 +7,7 @@ curl -LSso ~/.vim/autoload/pathogen.vim https://tpo.pe/pathogen.vim
 
 # set git global config
 git config --global core.editor vim
+git config --global alias.root 'cd $(git rev-parse --show-toplevel)'
 git config --global alias.ctags '!.git/hooks/ctags'
 git config --global init.templatedir '~/.dotfiles/env/git/template'
 git config --global credential.helper cache
