--- a/bin/install
+++ b/bin/install
@@ -4,7 +4,7 @@
 mkdir -p ~/.vim/{autoload,undodir}
 
 # download plugin managers
-curl -sL --proto-redir -all,https://raw.githubusercontent.com/zplug/installer/master/installer.sh | zsh
+curl -sL --proto-redir -all,https https://raw.githubusercontent.com/zplug/installer/master/installer.zsh | zsh
 curl -fLo ~/.vim/autoload/plug.vim https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
 
 # symlink dotfiles
