--- a/bin/install
+++ b/bin/install
@@ -1,10 +1,13 @@
 #!/bin/bash
 mkdir -p ~/.vim/{autoload,undodir}
-curl -sL --proto-redir -all,https https://raw.githubusercontent.com/zplug/installer/master/installer.zsh | zsh
 curl -fLo ~/.vim/autoload/plug.vim https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
+curl -sL --proto-redir -all,https https://raw.githubusercontent.com/zplug/installer/master/installer.zsh | zsh
+git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 ln -s ~/.dotfiles/vimrc ~/.vimrc
 ln -s ~/.dotfiles/zshrc ~/.zshrc
 ln -s ~/.dotfiles/tmux.conf ~/.tmux.conf
 ln -s ~/.dotfiles/gitconfig ~/.gitconfig
-zplug install
+ln -s ~/.dotfiles/ctags ~/.ctags
 vim +PlugInstall +qa
+zplug install
+~/.tmux/plugins/tpm/bin/install_plugins
