--- a/bin/install
+++ b/bin/install
@@ -1,5 +1,5 @@
 #!/bin/bash
-mkdir -p ~/.vim/{autoload,undodir}
+mkdir -p ~/.zsh ~/.vim/{autoload,undodir}
 curl -fLo ~/.vim/autoload/plug.vim https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
 curl -sL --proto-redir -all,https https://raw.githubusercontent.com/zplug/installer/master/installer.zsh | zsh
 git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
