--- a/bin/install
+++ b/bin/install
@@ -1,6 +1,7 @@
 #!/bin/bash
 git --git-dir=~/.dotfiles/.git submodule update --init
-curl -LSso ~/.vim/autoload/pathogen.vim --create-dirs https://tpo.pe/pathogen.vim
+mkdir -p ~/.vim/{autoload,swap,backup,undo}
+curl -LSso https://tpo.pe/pathogen.vim
 ln -sf ~/.dotfiles/ctags ~/.ctags
 ln -sf ~/.dotfiles/vimrc ~/.vimrc
 ln -sf ~/.dotfiles/zshrc ~/.zshrc
