--- a/bin/install
+++ b/bin/install
@@ -1,7 +1,8 @@
 #!/bin/bash
 git --git-dir=~/.dotfiles/.git submodule update --init
-mkdir -p ~/.vim/{autoload,swap,backup,undo}
-curl -LSso https://tpo.pe/pathogen.vim
+mkdir -p ~/.cache/vim/{swap,backup,undo} ~/.cache/zsh
+curl -LSso ~/.vim/autoload --create-dirs https://tpo.pe/pathogen.vim
+~/.dotfiles/plugs/zsh/fzf/install --bin
 ln -sf ~/.dotfiles/ctags ~/.ctags
 ln -sf ~/.dotfiles/vimrc ~/.vimrc
 ln -sf ~/.dotfiles/zshrc ~/.zshrc
