--- a/bin/install
+++ b/bin/install
@@ -1,7 +1,7 @@
 #!/bin/bash
-git --git-dir=~/.dotfiles/.git submodule update --init
+git -C ~/.dotfiles submodule update --init
 mkdir -p ~/.cache/vim/{swap,backup,undo} ~/.cache/zsh
-curl -LSso ~/.vim/autoload --create-dirs https://tpo.pe/pathogen.vim
+curl -LSso ~/.vim/autoload/pathogen.vim --create-dirs https://tpo.pe/pathogen.vim
 ~/.dotfiles/plugs/zsh/fzf/install --bin
 ln -sf ~/.dotfiles/ctags ~/.ctags
 ln -sf ~/.dotfiles/vimrc ~/.vimrc
