--- a/bin/install
+++ b/bin/install
@@ -1,9 +1,11 @@
 #!/bin/bash
+[ -d ~/.vim ] && rm -rf ~/.vim.bak && mv ~/.vim ~/.vim.bak
+[ -d ~/.zsh ] && rm -rf ~/.zsh.bak && mv ~/.zsh ~/.zsh.bak
+mkdir -p ~/.cache/{vim,zsh} ~/.cache/vim/{swap,backup,undo}
 git -C ~/.dotfiles submodule update --init
-mkdir -p ~/.cache/vim/{swap,backup,undo} ~/.cache/zsh
-curl -LSso ~/.vim/autoload/pathogen.vim https://tpo.pe/pathogen.vim
-ln -sf ~/.dotfiles/ctags ~/.ctags
-ln -sf ~/.dotfiles/vimrc ~/.vimrc
-ln -sf ~/.dotfiles/zshrc ~/.zshrc
+curl -LSso ~/.dotfiles/vim/autoload/pathogen.vim https://tpo.pe/pathogen.vim
+ln -sf ~/.dotfiles/vimrc ~/.vimrc && ln -s ~/.dotfiles/vim ~/.vim
+ln -sf ~/.dotfiles/zshrc ~/.zshrc && ln -s ~/.dotfiles/zsh ~/.zsh
 ln -sf ~/.dotfiles/gitconfig ~/.gitconfig
 ln -sf ~/.dotfiles/tmux.conf ~/.tmux.conf
+ln -sf ~/.dotfiles/ctags ~/.ctags
