--- a/bin/install
+++ b/bin/install
@@ -1,11 +1,24 @@
 #!/bin/bash
+
+# setup plugins
 ~/.dotfiles/bin/update
+
+# create directories
 mkdir -p ~/.cache/{vim,zsh} ~/.cache/vim/{swap,backup,undo}
+
+# symlink directories
 rm -rf ~/.vim && ln -s ~/.dotfiles/vim ~/.vim
 rm -rf ~/.zsh && ln -s ~/.dotfiles/zsh ~/.zsh
 rm -rf ~/.ctags.d && ln -s ~/.dotfiles/ctags.d ~/.ctags.d
+
+# symlink dotfiles
 ln -sf ~/.dotfiles/gitconfig ~/.gitconfig
 ln -sf ~/.dotfiles/zshrc ~/.zshrc
 ln -sf ~/.dotfiles/tmux.conf ~/.tmux.conf
 ln -sf ~/.dotfiles/vimrc ~/.vimrc
 ln -sf ~/.dotfiles/ignore ~/.ignore
+
+# update terminfo
+tic -o $HOME/.terminfo tmux.terminfo
+tic -o $HOME/.terminfo tmux-256color.terminfo
+tic -o $HOME/.terminfo xterm-256color.terminfo
