--- a/bin/install
+++ b/bin/install
@@ -1,15 +1,10 @@
 #!/bin/bash
-
-mkdir -p \
-    ~/.cache/vim/{undo,swap} \
-    ~/.config/alacritty
-
-ln -sf ~/.dotifles/vim ~/.vim
+ln -sf ~/.dotfiles/alacritty.yml ~/.config/alacritty
+ln -sf ~/.dotfiles/gitconfig ~/.gitconfig
+ln -sf ~/.dotfiles/tmux.confg ~/.tmux.conf
+ln -sf ~/.dotfiles/vim ~/.vim
 ln -sf ~/.dotfiles/vimrc ~/.vimrc
 ln -sf ~/.dotfiles/zshrc ~/.zshrc
-ln -sf ~/.dotfiles/tmux.conf ~/.tmux.conf
-ln -sf ~/.dotfiles/gitconfig ~/.gitconfig
-ln -sf ~/.dotfiles/alacritty.yml ~/.config/alacritty/alacritty.yml
 
 curl -fLo ~/.vim/autoload/plug.vim --create-dirs \
     https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
