--- a/bin/install
+++ b/bin/install
@@ -1,10 +1,11 @@
 #!/bin/bash
-ln -sf ~/.dotfiles/alacritty.yml ~/.config/alacritty
-ln -sf ~/.dotfiles/gitconfig ~/.gitconfig
-ln -sf ~/.dotfiles/tmux.confg ~/.tmux.conf
 ln -sf ~/.dotfiles/vim ~/.vim
 ln -sf ~/.dotfiles/vimrc ~/.vimrc
 ln -sf ~/.dotfiles/zshrc ~/.zshrc
+ln -sf ~/.dotfiles/gitconfig ~/.gitconfig
+ln -sf ~/.dotfiles/tmux.confg ~/.tmux.conf
+
+mkdir ~/.vim/{swap,undo}
 
 curl -fLo ~/.vim/autoload/plug.vim --create-dirs \
     https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
