--- a/bin/install
+++ b/bin/install
@@ -1,11 +1,13 @@
-#!/bin/bash
+#!/bin/sh
+
+mkdir -p ~/.config/alacritty ~/.dotfiles/vim/{swap,undo}
+
+ln -sf ~/.dotfiles/alacritty.yml ~/.config/alacritty/alacritty.yml
+ln -sf ~/.dotfiles/gitconfig ~/.gitconfig
+ln -sf ~/.dotfiles/tmux.confg ~/.tmux.conf
 ln -sf ~/.dotfiles/vim ~/.vim
 ln -sf ~/.dotfiles/vimrc ~/.vimrc
 ln -sf ~/.dotfiles/zshrc ~/.zshrc
-ln -sf ~/.dotfiles/gitconfig ~/.gitconfig
-ln -sf ~/.dotfiles/tmux.confg ~/.tmux.conf
-
-mkdir ~/.vim/{swap,undo}
 
 curl -fLo ~/.vim/autoload/plug.vim --create-dirs \
     https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
