--- a/bin/install
+++ b/bin/install
@@ -1,16 +1,11 @@
 #!/bin/sh
-
-mkdir -p ~/.config/alacritty ~/.dotfiles/vim/{swap,undo}
-
-ln -sf ~/.dotfiles/alacritty.yml ~/.config/alacritty/alacritty.yml
+mkdir ~/.dotfiles/vim/{swap,undo}
 ln -sf ~/.dotfiles/gitconfig ~/.gitconfig
 ln -sf ~/.dotfiles/tmux.confg ~/.tmux.conf
 ln -sf ~/.dotfiles/vim ~/.vim
 ln -sf ~/.dotfiles/vimrc ~/.vimrc
 ln -sf ~/.dotfiles/zshrc ~/.zshrc
-
 curl -fLo ~/.vim/autoload/plug.vim --create-dirs \
     https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
-
 curl -sL --proto-redir -all,https \
     https://raw.githubusercontent.com/zplug/installer/master/installer.zsh | zsh
