--- a/bin/install
+++ b/bin/install
@@ -1,15 +1,16 @@
 #!/bin/sh
 
-mkdir -p ~/.config/alacritty ~/.vim/{swap,undo}
+mkdir -p ~/.config/{alacritty,neovim} ~/.vim/{swap,undo}
 
 ln -sf ~/.dotfiles/alacritty.yml ~/.config/alacritty
+ln -sf ~/.dotfiles/init.vim ~/.config/neovim
 ln -sf ~/.dotfiles/gitconfig ~/.gitconfig
 ln -sf ~/.dotfiles/ignore ~/.ignore
 ln -sf ~/.dotfiles/tmux.conf ~/.tmux.conf
 ln -sf ~/.dotfiles/vimrc ~/.vimrc
 ln -sf ~/.dotfiles/zshrc ~/.zshrc
 
-curl -fLo ~/.vim/autoload/plug.vim --create-dirs \
+curl -fLo ~/.config/neovim/autoload/plug.vim --create-dirs \
     https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
 
 curl -sL --proto-redir -all,https \
