--- a/bin/install
+++ b/bin/install
@@ -1,13 +1,9 @@
 #!/bin/sh
 
-mkdir -p ~/.config/{alacritty,neovim} ~/.vim/{swap,undo}
+mkdir -p \
+    ~/.config/{alacritty,git,fish,neovim,tmux} \
+    ~/.cache/neovim/{swap,undo}
 
-ln -sf ~/.dotfiles/alacritty.yml ~/.config/alacritty
-ln -sf ~/.dotfiles/init.vim ~/.config/neovim
-ln -sf ~/.dotfiles/gitconfig ~/.gitconfig
-ln -sf ~/.dotfiles/ignore ~/.ignore
-ln -sf ~/.dotfiles/tmux.conf ~/.tmux.conf
-ln -sf ~/.dotfiles/vimrc ~/.vimrc
 ln -sf ~/.dotfiles/zshrc ~/.zshrc
 
 curl -fLo ~/.config/neovim/autoload/plug.vim --create-dirs \
