--- a/bin/install
+++ b/bin/install
@@ -1,13 +1,8 @@
 #!/bin/sh
 
 mkdir -p \
-    ~/.config/{alacritty,git,fish,neovim,tmux} \
+    ~/.config/{alacritty,git,fish,nvim,tmux} \
     ~/.cache/neovim/{swap,undo}
-
-ln -sf ~/.dotfiles/zshrc ~/.zshrc
 
 curl -fLo ~/.config/neovim/autoload/plug.vim --create-dirs \
     https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
-
-curl -sL --proto-redir -all,https \
-    https://raw.githubusercontent.com/zplug/installer/master/installer.zsh | zsh
