--- a/bin/install
+++ b/bin/install
@@ -2,7 +2,7 @@
 
 mkdir -p \
     ~/.config/{alacritty,git,fish,nvim,tmux} \
-    ~/.cache/neovim/{swap,undo}
+    ~/.cache/nvim/{swap,undo}
 
 curl -fLo ~/.config/neovim/autoload/plug.vim --create-dirs \
     https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
