--- a/bin/install
+++ b/bin/install
@@ -4,5 +4,8 @@ mkdir -p \
     ~/.config/{alacritty,git,fish,nvim,tmux} \
     ~/.cache/nvim/{swap,undo}
 
+curl -sLo ~/.config/fish/fisher/functions/fisher.fish --create-dirs \
+    https://git.io/fisher
+
 curl -fLo ~/.config/neovim/autoload/plug.vim --create-dirs \
     https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
