--- a/bin/install
+++ b/bin/install
@@ -1,11 +1,8 @@
 #!/bin/sh
 
-mkdir -p \
-    ~/.config/{alacritty,git,fish,nvim,tmux} \
-    ~/.cache/nvim/{swap,undo}
-
-curl -sLo ~/.config/fish/fisher/functions/fisher.fish --create-dirs \
-    https://git.io/fisher
+mkdir -p ~/.config/{alacritty,git,fish,nvim,tmux} ~/.cache/nvim/{swap,undo}
 
 curl -fLo ~/.config/neovim/autoload/plug.vim --create-dirs \
     https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
+
+nvim +PluginInstall +qall
