remove coc for basic tags; setup ctags with git hooks

--- a/bin/install
+++ b/bin/install
@@ -1,7 +1,8 @@
 #!/bin/sh
 
 mkdir -p ~/.config ~/.cache/nvim/{swap,undo}
-ln -sf ~/.config{alacritty,docker,git,fish,nvim,tmux}
+ln -sf ~/.dotfiles{alacritty,docker,git,fish,nvim,tmux} ~/.config
+ln -sf ~/.dotfiles/ctags.d ~/.ctags.d
 
 curl -fLo ~/.config/neovim/autoload/plug.vim --create-dirs \
     https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
