--- a/bin/install
+++ b/bin/install
@@ -1,7 +1,7 @@
 #!/bin/sh
 
 mkdir -p ~/.config ~/.cache/nvim/{swap,undo}
-ln -sf ~/.dotfiles{alacritty,docker,git,fish,nvim,tmux} ~/.config
+ln -sf ~/.dotfiles/{alacritty,docker,git,fish,nvim,tmux} ~/.config
 ln -sf ~/.dotfiles/ctags.d ~/.ctags.d
 
 curl -fLo ~/.config/neovim/autoload/plug.vim --create-dirs \
