--- a/bin/install
+++ b/bin/install
@@ -1,8 +1,7 @@
 #!/bin/sh
 
 mkdir -p ~/.config ~/.cache/nvim/{swap,undo}
-ln -sf ~/.dotfiles/{alacritty,docker,git,fish,nvim,tmux} ~/.config
-ln -sf ~/.dotfiles/ctags.d ~/.ctags.d
+ln -sf ~/.dotfiles/{alacritty,ctags,docker,git,fish,nvim,tmux} ~/.config
 
 curl -fLo ~/.config/neovim/autoload/plug.vim --create-dirs \
     https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
