--- a/bin/install
+++ b/bin/install
@@ -1,7 +1,10 @@
 #!/bin/sh
 
 mkdir -p ~/.config ~/.cache/nvim/{swap,undo}
-ln -sf ~/.dotfiles/{alacritty,ctags,docker,git,fish,nvim,tmux} ~/.config
+ln -sf ~/.dotfiles/{ctags,docker,git,fish,nvim,tmux} ~/.config
+
+curl https://git.io/fisher --create-dirs -sLo \
+    ~/.config/fish/functions/fisher.fish
 
 curl -fLo ~/.config/neovim/autoload/plug.vim --create-dirs \
     https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
