--- a/bin/install
+++ b/bin/install
@@ -1,10 +1,8 @@
 #!/bin/sh
 
-mkdir -p ~/.config ~/.cache/nvim/undo
-ln -sf ~/.dotfiles/{ctags,docker,git,fish,nvim,tmux} ~/.config
+mkdir -p ~/.config ~/.cache/vim/undo
 
-curl https://git.io/fisher --create-dirs -sLo \
-    ~/.config/fish/functions/fisher.fish
+ln -sf ~/.dotfiles/{alacritty,awesome,docker,fish,git,tmux,vim} ~/.config
 
 curl -fLo ~/.config/neovim/autoload/plug.vim --create-dirs \
     https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
