--- a/bin/install
+++ b/bin/install
@@ -2,9 +2,9 @@
 
 mkdir -p ~/.config
 
-ln -sf ~/.dotfiles/{alacritty,awesome,docker,fish,git,tmux,vim} ~/.config
+ln -fns ~/.dotfiles/{alacritty,awesome,docker,fish,git,nvim,tmux} ~/.config
 
-curl -fLo ~/.config/neovim/autoload/plug.vim --create-dirs \
+curl -fLo ~/.config/nvim/autoload/plug.vim --create-dirs \
     https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
 
 nvim +PluginInstall +qall
